# sideqt

./: .gitignore  LICENSE  README.md  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: app.py
src/sideqt/: __main__.py
