[project]
name = "sideqt"
version = "1.1.0"
description = "SideQt App"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "frozenlist==1.8.0",
    "idna==3.18",
    "multidict==6.7.1",
    "propcache==0.5.2",
    "pyside6==6.11.1",
    "pyside6-addons==6.11.1",
    "pyside6-essentials==6.11.1",
    "requests==2.34.2",
    "shiboken6==6.11.1",
    "urllib3==2.7.0",
    "yarl==1.24.2",
]

[dependency-groups]
dev = [
    "briefcase>=0.3.23",
]

[tool.briefcase]
project_name = "SideQt"
bundle = "com.sideqt"
version = "1.1.0"

[tool.briefcase.app.sideqt]
formal_name = "SideQt"
description = "SideQt App"
sources = ["src/sideqt"]
requires = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "attrs",
    "certifi",
    "charset-normalizer",
    "frozenlist",
    "idna",
    "multidict",
    "propcache",
    "pyside6",
    "pyside6-addons",
    "pyside6-essentials",
    "requests",
    "shiboken6",
    "urllib3",
    "yarl",
]

[tool.briefcase.app.sideqt.windows]
